# notifications

./: .env.example  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  readme.md
src/: endpoints.rs  main.rs  notifications.rs  scheduler.rs  storage.rs  telegram.rs  utils.rs
src/notificators/: mod.rs  telegram.rs
