[package]
name = "notifications"
version = "0.1.0"
edition = "2024"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dependencies]
redis = { version = "0.29.5", features = ["json"] }
chrono = "0.4.40"
dotenv = "0.15.0"
tbot = "0.6"
tokio = { version = "0.2", features = ["macros"] }
serde = "1.0.219"
serde_json = "1.0.140"
