[package]
name = "notificator"
version = "1.0.1"
edition = "2024"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dependencies]
redis = { version = "0.29.5", features = ["json"] }
chrono = "0.4.40"
dotenv = "0.15.0"
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
axum = { version = "0.7.4", features = ["macros"] }
